k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  annotations:
    cloud.google.com/app-protocols: '{"http":"HTTP"}'
    cloud.google.com/neg: '{"ingress": true}'

spec:
  type: ClusterIP
  selector:
    component: api
  ports:
  - name: http
    port: 3000
    targetPort: 3000
