k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-Service
  annotations:
    cloud.google.com/app-protocols: '{"http":"HTTP"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
  - name: http
    port: 80
    targetPort: 80
